--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-cayman
+
+title: [Petrified voices]
+description: [Petra's research on quantitative digital epigraphy]
+show_downloads: ["true"]
+
