--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 # Title of your website
-title: [Petrified voices]
-
+title: Petrified voices
 # The slogan describes your website and is used on homepage in <title> and other important places
 slogan: Petra's research on quantitative digital epigraphy
 
